--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "cookies-next": "^4.0.0",
+    "crypto-js": "^4.1.1",
+    "jose": "^4.15.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +22,8 @@
     "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.2",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
