--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "crypto-js": "^4.1.1",
@@ -19,12 +20,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.2",
     "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20",
+    "@types/node": "^20.8.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
@@ -32,6 +34,6 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
