--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends":["next/core-web-vitals","airbnb","airbnb-typescript"],
+  "plugins":["@typescript-eslint"],
+  "parserOptions":{
+    "project":"./tsconfig.json"
+},
+  "rules": {
+    "@typescript-eslint/no-unused-vars":"error",
+    "import/named":"error",
+    "@next/next/no-html-link-for-pages":"error"   
+  }
 }
