--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.0.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "crypto-js": "^4.1.1",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "jose": "^4.15.4",
     "jsonwebtoken": "^9.0.2",
     "next": "13.5.4",
@@ -32,6 +35,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5.2.2"
