--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/eslint-plugin-next": "^14.0.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "antd": "^5.11.0",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "crypto-js": "^4.1.1",
@@ -30,7 +31,7 @@
     "@types/crypto-js": "^4.1.2",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
-    "@types/react": "^18",
+    "@types/react": "^18.2.34",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
