--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@next/eslint-plugin-next": "^14.0.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "antd": "^5.11.0",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "crypto-js": "^4.1.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "framer-motion": "^10.16.4",
     "jose": "^4.15.4",
     "jsonwebtoken": "^9.0.2",
     "next": "13.5.4",
@@ -31,7 +35,7 @@
     "@types/crypto-js": "^4.1.2",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
-    "@types/react": "^18.2.34",
+    "@types/react": "^18.2.36",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
