--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "types": [    
       "node"
     ],
+    "moduleResolution": "node",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -10,8 +11,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "esnext",   
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
