--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@next/eslint-plugin-next": "^14.0.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.8.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
